# tds-vitual-ta

./: .gitignore  README.md  app.py  discourse_downloader_full.py  discourse_scraper.py  main.py  metadata.json  package-lock.json  package.json  project-tds-virtual-ta-promptfoo.yaml  pyproject.toml  requirements.txt
discourse_json/: topic_141413.json  topic_161071.json  topic_161072.json  topic_161083.json  topic_161120.json  topic_161214.json  topic_162425.json  topic_163144.json  topic_163147.json  topic_163158.json  topic_163224.json  topic_163241.json  topic_163247.json  topic_163381.json  topic_163765.json  topic_164089.json  topic_164147.json  topic_164205.json  topic_164214.json  topic_164277.json  topic_164291.json  topic_164460.json  topic_164462.json  topic_164737.json  topic_164869.json  topic_165142.json  topic_165396.json  topic_165416.json  topic_165433.json  topic_165593.json  topic_165687.json  topic_165746.json  topic_165830.json  topic_165922.json  topic_165959.json  topic_166100.json  topic_166189.json  topic_166303.json  topic_166349.json  topic_166357.json  (+80 more)
tds_pages_md/: 1._Development_Tools.md  2._Deployment_Tools.md  3._Large_Language_Models.md  4._Data_Sourcing.md  5._Data_Preparation.md  6._Data_Analysis.md  7._Data_Visualization.md  AI_Code_Editors__GitHub_Copilot.md  AI_Terminal_Tools__llm.md  Actor_Network_Visualization.md  Authentication__Google_Auth.md  BBC_Weather_API_with_Python.md  Base_64_Encoding.md  Browser__DevTools.md  CI_CD__GitHub_Actions.md  CORS.md  CSS_Selectors.md  Cleaning_Data_with_OpenRefine.md  Convert_HTML_to_Markdown.md  (+85 more)
